login modal width overflow of logo fix

--- a/awx/ui/client/src/login/loginModal/loginModal.block.less
+++ b/awx/ui/client/src/login/loginModal/loginModal.block.less
@@ -5,6 +5,10 @@
     background-color: #171717;
 }
 
+.LoginModal-logoImage {
+    max-width: 100%;
+}
+
 .LoginModal-alert {
     margin-bottom: 25px;
     font-size: 14px;
